--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ social:
   email: danielmesquitadev@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://github.com/username # change to your github homepage
+    - https://github.com/DanielGMesquita # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     - https://www.linkedin.com/in/danielgmesquita/
