--- a/_config.yml
+++ b/_config.yml
@@ -106,10 +106,10 @@ toc: true
 
 comments:
   # Global switch for the post comment system. Keeping it empty means disabled.
-  provider: # [disqus | utterances | giscus]
+  provider: disqus
   # The provider options are as follows:
   disqus:
-    shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+    shortname: danielmesquitadev
   # utterances settings › https://utteranc.es/
   utterances:
     repo: # <gh-username>/<repo>
@@ -167,6 +167,9 @@ collections:
   tabs:
     output: true
     sort_by: order
+  docs:
+    output: true
+    permalink: /:path/
 
 defaults:
   - scope:
